kubernetes/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fastapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: fastapi
    spec:
      containers:
        - image: fastapi
          name: fastapi
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: fastapi-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: fastapi-cm0
          name: fastapi-cm0
