kubernetes/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: ollama
    spec:
      containers:
        - env:
            - name: OLLAMA_KEEP_ALIVE
              value: 24h
          image: ollama
          name: ollama
          ports:
            - containerPort: 11434
              protocol: TCP
          tty: true
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama
      restartPolicy: Always
      volumes:
        - name: ollama
          persistentVolumeClaim:
            claimName: ollama
