kubernetes/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: streamlit
  name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: streamlit
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: streamlit
    spec:
      containers:
        - image: streamlit
          name: streamlit
          ports:
            - containerPort: 8501
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: streamlit-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: streamlit-cm0
          name: streamlit-cm0
