kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: frontend
        image: europe-west1-docker.pkg.dev/secure-project-tutorial/dasc-docker/frontend:latest
        ports:
        - containerPort: 8501
        resources:
          requests:
            cpu: "100m"  # Minimum CPU request
            memory: "100Mi"  # Minimum memory request
          limits:
            cpu: "500m"  # Maximum CPU limit
            memory: "512Mi"  # Maximum memory limit
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP       # Change to ClusterIP, no external IP needed
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80           # Port exposed by the Service
    targetPort: 8501   # Target port within the container
