kubernetes/llm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      tolerations:
        - key: "llm"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"  # This matches the taint on the llm-pool nodes
      initContainers:  # Init container to pull models before the main container starts
        - name: pull-models
          image: europe-west1-docker.pkg.dev/secure-project-tutorial/dasc-docker/ollama:latest
          command:
            - /bin/sh
            - "-c"
            - |
              echo "Pulling models llama3.2 and llama3.2:1b..."
              ollama pull llama3.2 && ollama pull llama3.2:1b
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
      containers:
      - name: server
        image: europe-west1-docker.pkg.dev/secure-project-tutorial/dasc-docker/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: "500m"  # Minimum CPU request
            memory: "256Mi"  # Minimum memory request
          limits:
            cpu: "1000m"  # Maximum CPU limit
            memory: "512Mi"  # Maximum memory limit
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
