kubernetes/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"                   # Allows access from any host (or specify a domain)
  gateways:
  - istio-system/frontend-gateway      # Links this VirtualService to the Gateway
  http:
  - match:
    - uri:
        prefix: "/"       # Matches all paths, or specify specific path if needed
    route:
    - destination:
        host: frontend-service.default.svc.cluster.local  # The name of your frontend service
        port:
          number: 80            # The service port specified in frontend-service
